# shot-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.yml  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: documentation-links.yml  publish.yml  test.yml
docs/: README.md  SUMMARY.md  accessibility.md  authentication.md  conf.py  contributing.md  github-actions.md  har.md  html.md  index.md  installation.md  javascript.md  multi.md  pdf.md  requirements.txt  screenshots.md  storyboard.md  video.md
shot_scraper/: cli.py  narration.py  storyboard.py  utils.py  video.py
tests/: conftest.py  run_examples.sh  test_narration.py  test_shot_scraper.py  test_storyboard.py  test_utils.py  test_video.py
